<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="30sp" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/email_hint"
        android:id="@+id/etEmail"
        android:autofillHints=""
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/username_hint"
        android:id="@+id/etUserName"
        android:autofillHints=""
        android:inputType="text" />
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:id="@+id/etPassword"
        android:autofillHints="" />
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/password_hint_2"
        android:inputType="textPassword"
        android:id="@+id/etPasswordConfirm"
        android:autofillHints="" />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnDialogSignup"
        android:text="@string/sign_up_button"
        android:layout_marginTop="100dp" />
</LinearLayout>

